# dirsql

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  MIGRATIONS.md  PARITY.md  README.md  ROADMAP.md  SUMMARY.md  TESTS_AUDIT.md  dist-workspace.toml  justfile  package.json  putitoutthere.toml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: select-environment.sh
.github/: actionlint.yaml
.github/workflows/: changelog-check.yml  docs-test.yml  docs.yml  minor-release.yml  npm-publish-test.yml  patch-release.yml  pr-monitor.yml  publish-npm.yml  publish.yml  putitoutthere.yml  python-lint.yml  python-test.yml  release-scripts.yml  release.yml  rust-test.yml  ts-lint.yml  ts-test.yml
agents/environments/: local.md  remote.md
benchmarks/: README.md
docs/: AGENTS.md  architecture.md  getting-started.md  index.md  migrations.md  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
docs/.claude/: CLAUDE.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  lang.ts
docs/api/: index.md
docs/guide/: async.md  cli.md  config.md  crdt.md  persistence.md  querying.md  tables.md  watching.md
docs/tests/integration/: home.spec.ts  language-flag.spec.ts
docs/tests/unit/: config.test.ts  lang.test.ts
notes/: agents.md
notes/environments/: remote.md
python/dirsql/: _async.py
scripts/: agent-preflight.sh
scripts/release/: check_published.py  check_published_test.py  compute_version.py  compute_version_test.py  pyproject.toml  resolve_publish_targets.py  resolve_publish_targets_test.py
src/: db.rs  lib.rs  watcher.rs
tests/integration/: test_async_dirsql.py
