[workspace]
members = ["packages/python", "packages/rust", "packages/ts"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/thekevinscott/dirsql"

[workspace.dependencies]
dirsql = { path = "packages/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
futures-channel = "0.3"
