[project]
name = "dirsql-release-scripts"
version = "0.0.0"
description = "Release orchestration scripts for dirsql"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-describe>=2",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py"]
